# llm-utils

./: .gitignore  .taplo.toml  AGENTS.md  Cargo.toml  Justfile  README.md  context7.json
.github/workflows/: release.yml
crates/llm-text/: Cargo.toml  README.md
crates/llm-text/src/: html.rs  lib.rs  links.rs  splitting.rs  text.rs
crates/opml-protocol/: Cargo.toml  README.md
crates/opml-protocol/examples/: basic.rs
crates/opml-protocol/src/: errors.rs  lib.rs
