[package]
name = "llm-text"
version = { workspace = true }
edition = { workspace = true }
description = "A Rust library for processing text for LLM consumption"
license = { workspace = true }
repository = { workspace = true }
keywords = ["llm", "text-processing", "html", "nlp", "text-extraction"]
categories = ["text-processing", "web-programming", "parsing"]
readme = "README.md"

[dependencies]
dom_smoothie = { workspace = true }
eyre = { workspace = true }
html2text = { workspace = true }
linkify = { workspace = true }
regex = { workspace = true }
unicode-segmentation = { workspace = true }
url = { workspace = true }
